<resources>
    <string name="app_name">Pinjam Ruang</string>
    <string name="cara_mudah">Cara Mudah</string>
    <string name="pinjam_ruang">Meminjam Ruang</string>

    <!--Button-->
    <string name="staff">Staff</string>
    <string name="approve">Approve</string>
    <string name="sign_in">Masuk</string>
    <string name="sign_in_here">Masuk Disini</string>
    <string name="register_here">Daftar Disini</string>
    <string name="register">Daftar</string>

    <!--TextView-->
    <string name="staff_login">Staff Login</string>
    <string name="staff_register">Staff Register</string>
    <string name="approve_login">Approve Login</string>
    <string name="donthave_an_account">Belum punya akun?</string>
    <string name="have_account">Sudah punya akun?</string>
    <string name="fullname">Nama Lengkap</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="email">Email</string>
    <string name="phone_number">Nomor Telepon</string>
    <string name="birthday">Tanggal Lahir</string>
    <string name="address">Alamat</string>

    <!--EditText-->
    <string name="nidn">NIDN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>

    <!--Text-->
    <string name="remember_me">Ingat Saya</string>
    <string name="forgot_password">Lupa Password?</string>
</resources>
