<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_staff_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".activity.StaffRegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <FrameLayout
        android:id="@+id/logoStaffRegister_frame"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/staffbg"
        android:scaleType="centerCrop">

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear_staffRegister"
        android:orientation="vertical"
        android:layout_below="@+id/logoStaffRegister_frame">

        <customfonts.MyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/title_staffLogin"
            android:text="@string/staff_register"
            android:textColor="#4c565f"
            android:textSize="29dp"
            android:gravity="center"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fullnameStaffRegister_editText"
            android:textColorHint="@color/colorhint"
            android:textColor="@color/colortext">

            <customfonts.MyEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:hint="@string/fullname"
                android:layout_marginStart="46dp"
                android:layout_marginLeft="46dp"
                android:layout_marginRight="46dp"
                android:textColorHint="@color/colorhint"
                android:textColor="@color/colortext"
                android:maxLength="12"
                android:background="#0000"
                android:padding="16dp"
                android:inputType="text"
                android:layout_gravity="start"
                android:gravity="left"
                android:drawablePadding="12dp"/>

        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="56dp"
            android:layout_marginRight="56dp"
            android:background="#59d58d"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nidnStaffRegister_editText"
            android:textColorHint="@color/colorhint"
            android:textColor="@color/colortext">

            <customfonts.MyEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:hint="@string/nidn"
                android:layout_marginStart="46dp"
                android:layout_marginRight="46dp"
                android:layout_marginLeft="46dp"
                android:textColorHint="@color/colorhint"
                android:textColor="@color/colortext"
                android:maxLength="12"
                android:background="#0000"
                android:padding="16dp"
                android:inputType="number"
                android:gravity="left|start"
                android:drawablePadding="12dp"/>

        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="56dp"
            android:layout_marginRight="56dp"
            android:background="#59d58d"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emailStaffRegister_editText"
            android:textColorHint="@color/colorhint"
            android:textColor="@color/colortext">

            <customfonts.MyEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:hint="@string/email"
                android:layout_marginStart="46dp"
                android:layout_marginRight="46dp"
                android:layout_marginLeft="46dp"
                android:textColorHint="@color/colorhint"
                android:textColor="@color/colortext"
                android:maxLength="12"
                android:background="#0000"
                android:padding="16dp"
                android:inputType="textEmailAddress"
                android:gravity="left|start"
                android:drawablePadding="12dp"/>

        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="56dp"
            android:layout_marginRight="56dp"
            android:background="#59d58d"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passwordStaffRegister_editText"
            android:textColorHint="@color/colorhint"
            android:textColor="@color/colortext">

            <customfonts.MyEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:hint="@string/password"
                android:layout_marginStart="46dp"
                android:layout_marginLeft="46dp"
                android:layout_marginRight="46dp"
                android:textColorHint="@color/colorhint"
                android:textColor="@color/colortext"
                android:background="#0000"
                android:padding="16dp"
                android:inputType="textPassword"
                android:drawablePadding="12dp"/>

        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="56dp"
            android:layout_marginRight="56dp"
            android:background="#59d58d"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/phoneStaffRegister_editText"
            android:textColorHint="@color/colorhint"
            android:textColor="@color/colortext">

            <customfonts.MyEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:hint="@string/phone_number"
                android:layout_marginStart="46dp"
                android:layout_marginRight="46dp"
                android:layout_marginLeft="46dp"
                android:textColorHint="@color/colorhint"
                android:textColor="@color/colortext"
                android:maxLength="12"
                android:background="#0000"
                android:padding="16dp"
                android:inputType="number"
                android:gravity="left|start"
                android:drawablePadding="12dp"/>

        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="56dp"
            android:layout_marginRight="56dp"
            android:background="#59d58d"/>

        <customfonts.MyTextView
            android:id="@+id/birthdayStaffRegister_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:padding="8dp"
            android:textColor="@color/colorhint"
            android:text="@string/birthday"
            android:textSize="18sp"
            android:layout_marginLeft="46dp"
            android:layout_marginRight="46dp"/>

        <customfonts.MyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:padding="8dp"
            android:textColor="@color/colorhint"
            android:text="@string/gender"
            android:textSize="18sp"
            android:layout_marginLeft="46dp"
            android:layout_marginRight="46dp"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/genderStaffRegister_spinner"
            android:background="@color/grey_300"
            android:padding="12dp"
            android:scrollbars="vertical"
            android:layout_marginLeft="55dp"
            android:layout_marginRight="55dp"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/addressStaffRegister_editText"
            android:textColorHint="@color/colorhint"
            android:textColor="@color/colortext">

            <customfonts.MyEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:hint="@string/address"
                android:layout_marginStart="46dp"
                android:layout_marginRight="46dp"
                android:layout_marginLeft="46dp"
                android:textColorHint="@color/colorhint"
                android:textColor="@color/colortext"
                android:maxLength="12"
                android:background="#0000"
                android:padding="16dp"
                android:inputType="textMultiLine"
                android:lines="4"
                android:maxLines="6"
                android:gravity="left|start"
                android:drawablePadding="12dp"/>

        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="56dp"
            android:layout_marginRight="56dp"
            android:background="#59d58d"/>

        <customfonts.MyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/registerStaffRegister_button"
            android:background="@drawable/rect_green1"
            android:text="@string/register"
            android:textSize="16sp"
            android:textColor="#fff"
            android:gravity="center"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:padding="12dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="11dp"
            android:elevation="3dp"/>

        <customfonts.MyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/noAccount_textView"
            android:text="@string/have_account"
            android:gravity="center"
            android:lines="1"
            android:textColor="@color/colorhint"
            android:layout_marginBottom="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear_loginBtn"
        android:layout_below="@+id/linear_staffRegister"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp">

        <customfonts.MyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/loginStaffRegister_button"
            android:background="@drawable/rect_orange1"
            android:text="@string/sign_in_here"
            android:textSize="16sp"
            android:textColor="#fff"
            android:gravity="center"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:padding="12dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="11dp"
            android:elevation="3dp"/>

    </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
